# product-api/handlers/get.go
@@ -6,12 +6,11 @@ import (
 	"github.com/uswah-uswatunhahaha/building-microservices/product-api/data"
 )
 
-// swagger:route GET /product/{id} product getSingleProduct
-// Get a product by id
-//
+// swagger:route GET /product/{id} product listSingleProduct
+// Return a list of products from the database
 // responses:
 //	200: productResponse
-//  404: errorResponse
+//	404: errorResponse
 
 // ListSingle is a handler to get product by id
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
@@ -47,12 +46,10 @@ func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /product product getAllProducts
-// Get all products
-//
+// swagger:route GET /product product listProducts
+// Return a list of products from the database
 // responses:
-//	200: productResponse
-//  404: errorResponse
+//	200: productsResponse
 
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
