# product-api/swagger.yaml
@@ -1,3 +1,6 @@
+basePath: /
+consumes:
+- application/json
 definitions:
   GenericError:
     description: GenericError is a generic error message returned by a server
@@ -8,37 +11,53 @@ definitions:
     type: object
     x-go-package: github.com/uswah-uswatunhahaha/building-microservices/product-api/handlers
   Product:
-    description: Product is entities of database fields
+    description: Product defines the structure for an API product
     properties:
       description:
+        description: the description for this poduct
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
+        description: the id for the product
         format: int64
+        minimum: 1
         type: integer
         x-go-name: ID
       name:
+        description: the name for this poduct
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: the price for the product
         format: double
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
+    required:
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/uswah-uswatunhahaha/building-microservices/product-api/data
+info:
+  description: Documentation for Product API
+  title: of Product API
+  version: 1.0.0
 paths:
   /product:
     get:
-      description: Get all products
-      operationId: getAllProducts
+      description: Return a list of products from the database
+      operationId: listProducts
       responses:
         "200":
-          $ref: '#/responses/productResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
+          $ref: '#/responses/productsResponse'
       tags:
       - product
     post:
@@ -57,35 +76,6 @@ paths:
         "200":
           $ref: '#/responses/productResponse'
         "501":
-          $ref: '#/responses/errorResponse'
-      tags:
-      - product
-  /product/{id}:
-    delete:
-      description: Delete a product by id
-      operationId: deleteProduct
-      parameters:
-      - description: The id of product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
-      responses:
-        "200":
-          $ref: '#/responses/productResponse'
-        "501":
-          $ref: '#/responses/errorResponse'
-      tags:
-      - product
-    get:
-      description: Get a product by id
-      operationId: getSingleProduct
-      responses:
-        "200":
-          $ref: '#/responses/productResponse'
-        "404":
           $ref: '#/responses/errorResponse'
       tags:
       - product
@@ -115,6 +105,47 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - product
+  /product/{id}:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      parameters:
+      - description: The id of product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - product
+    get:
+      description: Return a list of products from the database
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - product
+produces:
+- application/json
 responses:
   errorResponse:
     description: Generic error message returned as a string
@@ -132,4 +163,6 @@ responses:
       items:
         $ref: '#/definitions/Product'
       type: array
+schemes:
+- http
 swagger: "2.0"
